--- a/bricks/v2-adapter/package.json
+++ b/bricks/v2-adapter/package.json
@@ -58,6 +58,7 @@
     "@next-dll/d3": "^2.0.78",
     "@next-dll/echarts": "^2.0.79",
     "@next-dll/editor-bricks-helper": "^0.34.64",
-    "@next-dll/react-dnd": "^0.1.534"
+    "@next-dll/react-dnd": "^0.1.534",
+    "copy-webpack-plugin": "^11.0.0"
   }
 }
