--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     ]
   },
   "devDependencies": {
+    "@next-core/babel-preset-next": "^1.0.2",
     "@next-core/brick-container": "^3.0.2",
     "@next-core/brick-playground": "^1.0.2",
+    "@next-core/browserslist-config-next": "^1.0.2",
     "@next-core/test-next": "^1.0.2",
     "@types/history": "^4.7.11",
     "@types/js-yaml": "^3.12.7",
