--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -44,7 +44,8 @@
     "@next-core/types": "^1.0.2",
     "@next-core/utils": "^1.0.2",
     "classnames": "^2.3.2",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "@next-bricks/icons": "^0.0.2"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.0.2",
