--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -44,11 +44,14 @@
     "@next-core/types": "^1.0.2",
     "@next-core/utils": "^1.0.2",
     "classnames": "^2.3.2",
+    "d3-hierarchy": "^3.1.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
-    "@next-bricks/icons": "^0.0.2"
+    "@next-bricks/icons": "^0.0.2",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.0.2",
-    "@next-core/test-next": "^1.0.2"
+    "@next-core/test-next": "^1.0.2",
+    "@types/d3-hierarchy": "^3.1.2"
   }
 }
