--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -45,6 +45,7 @@
     "@next-core/react-runtime": "^1.0.2",
     "@next-core/theme": "^1.0.2",
     "@next-core/types": "^1.0.3",
+    "brace": "^0.11.1",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117",
