--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@next-core/brick-container": "^3.0.5",
     "@next-core/brick-playground": "^1.0.4",
     "@next-core/browserslist-config-next": "^1.0.2",
+    "@next-core/eslint-config-next": "^2.0.2",
     "@next-core/test-next": "^1.0.2",
     "@types/history": "^4.7.11",
     "@types/js-yaml": "^3.12.7",
