fix(): fix exposed types

--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -15,8 +15,8 @@
   ],
   "exports": {
     "./package.json": "./package.json",
-    "./*": {
-      "types": "./dist-types/*/index.d.ts"
+    "./data-providers/*": {
+      "types": "./dist-types/data-providers/*.d.ts"
     }
   },
   "nx": {
