--- a/bricks/v2-adapter/package.json
+++ b/bricks/v2-adapter/package.json
@@ -40,6 +40,7 @@
     "@next-core/http": "^1.0.2",
     "@next-core/i18n": "^1.0.4",
     "@next-core/loader": "^1.1.0",
+    "@next-core/react-element": "^1.0.2",
     "@next-core/runtime": "^1.0.6",
     "@next-core/theme": "^1.0.2",
     "@next-core/utils": "^1.1.0",
