--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -38,6 +38,7 @@
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next"
   },
   "dependencies": {
+    "@next-bricks/advanced": "0.0.5",
     "@next-bricks/icons": "^0.0.4",
     "@next-core/element": "^1.0.2",
     "@next-core/http": "^1.0.2",
@@ -45,12 +46,9 @@
     "@next-core/react-runtime": "^1.0.6",
     "@next-core/theme": "^1.0.2",
     "@next-core/types": "^1.0.3",
-    "brace": "^0.11.1",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
-    "react": "0.0.0-experimental-ee8509801-20230117",
-    "react-ace": "^10.1.0",
-    "resize-observer-polyfill": "^1.5.1"
+    "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.1.2",
