--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,31 @@ jobs:
       if: steps.yarn-lock-check-before.outputs.sum != steps.yarn-lock-check-after.outputs.sum
 
     - run: yarn build
+      if: github.event_name != 'pull_request'
+
+    # v2-adapter is not used in playground
+    - run: yarn build --ignore @next-bricks/v2-adapter
+      if: github.event_name == 'pull_request'
+
+    - run: yarn build:gh
+
+    - name: Deploy to Netlify
+      uses: nwtgck/actions-netlify@v2.0
+      with:
+        publish-dir: './dist/playground'
+        production-branch: master
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        deploy-message: "Deploy from GitHub Actions"
+        alias: deploy-preview-${{ github.event.number }}
+      env:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      timeout-minutes: 1
+      if: github.event_name == 'pull_request'
+
+    - run: yarn build --scope @next-bricks/v2-adapter
+      if: github.event_name == 'pull_request'
+
     - run: yarn test:ci
 
     - name: Codecov
@@ -69,9 +94,6 @@ jobs:
     - uses: easyops-cn/actions-next-publish-from-tags@master
       with:
         npm-token: ${{ secrets.NPM_TOKEN }}
-      if: github.event_name == 'push'
-
-    - run: yarn build:gh
       if: github.event_name == 'push'
 
     - name: Deploy
