--- a/bricks/data-view/src/app-wall/system-card/example.yaml
+++ b/bricks/data-view/src/app-wall/system-card/example.yaml
@@ -5,34 +5,35 @@
       bricks:
         - brick: data-view.app-wall-system-card
           properties:
-            cardTitle: 丽码购系统
+            cardTitle: A系统
             itemList:
-              - key: INSTANCEID
+            itemList:
+              - key: 实例ID
                 value: 5d570a851bef6
               - key: 系统英文缩写
-                value: nyougou-fms
-              - key: INSTANCEID
+                value: system-fms
+              - key: 实例ID
                 value: 5d570a851bef6
               - key: 系统英文名称
-                value: nyougou-finance manage system
+                value: app-fms
               - key: 系统中文名称
-                value: 优购网财务系统
+                value: A财务系统
               - key: 归属部门
                 value: 财务系统部
               - key: 系统类型
                 value: 应用系统
               - key: 系统描述
-                value: 1、使用场景概述：财务应收和应付结算（收退款，发退货，电子发票等） 2、人群：客服、财务、研发
+                value: 1、使用场景概述：财务应收和应付结算
             buttonName: 应用墙大屏
         - brick: data-view.app-wall-system-card
           properties:
-            cardTitle: 丽码购系统
+            cardTitle: B系统
             itemList:
-              - key: INSTANCEID
+              - key: 实例ID
                 value: 5d570a851bef6
               - key: 系统英文缩写
-                value: nyougou-fms
+                value: system-fms-B
               - key: 系统描述
-                value: 1、使用场景概述：财务应收和应付结算（收退款，发退货，电子发票等） 2、人群：客服、财务、研发
+                value: 1、使用场景概述：财务应收和应付结算
             buttonName: 应用墙大屏
             status: warning
