--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -44,14 +44,17 @@
     "@next-core/react-element": "^1.0.3",
     "@next-core/types": "^1.0.4",
     "@next-core/utils": "^1.2.1",
+    "@tweenjs/tween.js": "^19.0.0",
     "classnames": "^2.3.2",
     "d3-hierarchy": "^3.1.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.3.1",
     "@next-core/test-next": "^1.0.3",
-    "@types/d3-hierarchy": "^3.1.2"
+    "@types/d3-hierarchy": "^3.1.2",
+    "@types/three": "^0.150.1"
   }
 }
