--- a/bricks/shoelace/package.json
+++ b/bricks/shoelace/package.json
@@ -16,7 +16,9 @@
     "./package.json": "./package.json"
   },
   "scripts": {
+    "prestart": "node ./scripts/pre-build.js",
     "start": "cross-env NODE_ENV=development NODE_OPTIONS='--experimental-import-meta-resolve' build-next-bricks --watch",
+    "prebuild": "node ./scripts/pre-build.js",
     "build": "cross-env NODE_ENV=production NODE_OPTIONS='--experimental-import-meta-resolve' build-next-bricks",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next"
