--- a/bricks/devtools/package.json
+++ b/bricks/devtools/package.json
@@ -13,7 +13,8 @@
     "dist"
   ],
   "exports": {
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./dist/bricks.json": "./dist/bricks.json"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development build-next-bricks --watch",
