--- a/bricks/shoelace/package.json
+++ b/bricks/shoelace/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/shoelace",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/shoelace",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.4.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "@next-core/test-next": "^1.0.4"
+    "@next-core/test-next": "^1.0.4",
+    "copy-webpack-plugin": "^11.0.0"
   }
 }
