--- a/bricks/shoelace/package.json
+++ b/bricks/shoelace/package.json
@@ -22,7 +22,9 @@
     "prebuild": "node ./scripts/pre-build.js",
     "build": "cross-env NODE_ENV=production NODE_OPTIONS='--experimental-import-meta-resolve' build-next-bricks",
     "test": "cross-env NODE_ENV='test' test-next",
-    "test:ci": "cross-env NODE_ENV='test' CI=true test-next"
+    "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
+    "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies && npm pkg delete devDependencies",
+    "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
     "@next-core/i18n": "^1.0.8",
