fix(): remove dependencies before publish

--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -23,7 +23,9 @@
     "start": "cross-env NODE_ENV=development build-next-bricks --watch",
     "build": "cross-env NODE_ENV=production build-next-bricks",
     "test": "cross-env NODE_ENV='test' test-next",
-    "test:ci": "cross-env NODE_ENV='test' CI=true test-next"
+    "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
+    "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
+    "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
     "@next-core/element": "^1.0.4",
