--- a/bricks/shoelace/package.json
+++ b/bricks/shoelace/package.json
@@ -23,7 +23,7 @@
     "build": "cross-env NODE_ENV=production NODE_OPTIONS='--experimental-import-meta-resolve' build-next-bricks",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
-    "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies && npm pkg delete devDependencies",
+    "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
