--- a/bricks/shoelace/src/sl-card/example.yaml
+++ b/bricks/shoelace/src/sl-card/example.yaml
@@ -1,73 +1,80 @@
-brick: ':forEach'
-dataSource:
-- Shenzhen
-- San Francisco
-- New York
-- London
+brick: div
+properties:
+  style:
+    display: grid
+    gridTemplateColumns: repeat(auto-fill, minmax(220px, 1fr))
+    gap: 10px
 children:
-- brick: sl-card
+- brick: ':forEach'
+  dataSource:
+  - Shenzhen
+  - San Francisco
+  - New York
+  - London
   children:
-  - brick: div
-    slot: header
-    properties:
-      style:
-        display: flex
-        alignItems: center
-        justifyContent: space-between
+  - brick: sl-card
     children:
-    - brick: span
+    - brick: div
+      slot: header
       properties:
-        textContent: '<% ITEM %>'
-    - brick: span
-      properties:
-        id: '<% `time-${ITEM.replace(/ /g, "-")}` %>'
-  - brick: div
-    properties:
-      style:
-        display: flex
-        alignItems: center
-    children:
-    - brick: img
-      properties:
-        id: '<% `image-${ITEM.replace(/ /g, "-")}` %>'
         style:
-          width: 32px
-          height: 32px
-    - brick: span
+          display: flex
+          alignItems: center
+          justifyContent: space-between
+      children:
+      - brick: span
+        properties:
+          textContent: '<% ITEM %>'
+      - brick: span
+        properties:
+          id: '<% `time-${ITEM.replace(/ /g, "-")}` %>'
+    - brick: div
       properties:
-        id: '<% `text-${ITEM.replace(/ /g, "-")}` %>'
-        textContent: '...'
-    lifeCycle:
-      onMount:
-        useProvider: basic.http-request
-        args:
-        - |
-          <%
-            `//api.weatherapi.com/v1/current.json?${
-              new URLSearchParams({
-                key: '9e08e5e99e0c4b4c89023605231804',
-                q: ITEM,
-                aqi: 'no',
-              })
-            }`
-          %>
-        callback:
-          success:
-          - target: '<% `#image-${ITEM.replace(/ /g, "-")}` %>'
-            properties:
-              src: '<% String(EVENT.detail.current.condition.icon) %>'
-          - target: '<% `#text-${ITEM.replace(/ /g, "-")}` %>'
-            properties:
-              textContent: |
-                <%
-                  `${EVENT.detail.current.condition.text}, ${EVENT.detail.current.temp_c}°C`
-                %>
-          - target: '<% `#time-${ITEM.replace(/ /g, "-")}` %>'
-            properties:
-              textContent: |
-                <%
-                  moment(
-                    EVENT.detail.location.localtime,
-                    'YYYY-MM-DD HH:mm'
-                  ).format('h:mm A')
-                %>
+        style:
+          display: flex
+          alignItems: center
+      children:
+      - brick: img
+        properties:
+          id: '<% `image-${ITEM.replace(/ /g, "-")}` %>'
+          style:
+            width: 32px
+            height: 32px
+      - brick: span
+        properties:
+          id: '<% `text-${ITEM.replace(/ /g, "-")}` %>'
+          textContent: '...'
+      lifeCycle:
+        onMount:
+          useProvider: basic.http-request
+          args:
+          - |
+            <%
+              `//api.weatherapi.com/v1/current.json?${
+                new URLSearchParams({
+                  key: '9e08e5e99e0c4b4c89023605231804',
+                  q: ITEM,
+                  aqi: 'no',
+                })
+              }`
+            %>
+          callback:
+            success:
+            - target: '<% `#image-${ITEM.replace(/ /g, "-")}` %>'
+              properties:
+                src: '<% String(EVENT.detail.current.condition.icon) %>'
+            - target: '<% `#text-${ITEM.replace(/ /g, "-")}` %>'
+              properties:
+                textContent: |
+                  <%
+                    `${EVENT.detail.current.condition.text}, ${EVENT.detail.current.temp_c}°C`
+                  %>
+            - target: '<% `#time-${ITEM.replace(/ /g, "-")}` %>'
+              properties:
+                textContent: |
+                  <%
+                    moment(
+                      EVENT.detail.location.localtime,
+                      'YYYY-MM-DD HH:mm'
+                    ).format('h:mm A')
+                  %>
