--- a/nx.json
+++ b/nx.json
@@ -23,7 +23,13 @@
   "targetDefaults": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["prod", "^prod", "global"]
+      "inputs": ["prod", "^prod", "global"],
+      "outputs": [
+        "{projectRoot}/dist",
+        "{projectRoot}/dist-types",
+        "{projectRoot}/.pkgbuild",
+        "{projectRoot}/deploy"
+      ]
     },
     "test": {
       "inputs": ["default", "^prod", "global"],
