--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "scripts": {
     "prepare": "lerna bootstrap && husky install",
     "serve": "brick-container-serve",
-    "serve:e2e": "brick-container-serve --no-remote",
+    "serve:size-check": "brick-container-serve --no-remote --size-check",
     "serve:playground": "brick-playground-serve",
     "build": "lerna run build",
     "build:gh": "node scripts/build-gh.mjs",
     "test": "test-next-project",
     "test:ci": "lerna run test:ci --",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --record",
+    "cypress:run:no-record": "cypress run",
+    "size-check": "npx start-server-and-test serve:size-check http://localhost:8081/ cypress:run:no-record",
+    "size-check:ci": "npx start-server-and-test serve:size-check http://localhost:8081/ cypress:run",
     "lint-staged": "lint-staged"
   },
   "browserslist": {
@@ -27,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@cypress/browserify-preprocessor": "^3.0.2",
     "@next-core/babel-preset-next": "^1.0.4",
     "@next-core/brick-container": "^3.1.25",
     "@next-core/brick-playground": "^1.8.15",
@@ -41,6 +47,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "cross-env": "^7.0.3",
+    "cypress": "^12.12.0",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
