fix(): decrease icons transfer size

--- a/.github/workflows/size-check.yml
+++ b/.github/workflows/size-check.yml
@@ -65,4 +65,4 @@ jobs:
       env:
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
-    - run: cat size-check.log
+    - run: cat size-check.log.yml
