--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@next-core/brick-icons": "^2.31.34",
     "@next-core/build-next-bricks": "^1.5.1",
-    "@next-core/test-next": "^1.0.5"
+    "@next-core/test-next": "^1.0.5",
+    "copy-webpack-plugin": "^11.0.0"
   }
 }
