--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["bricks/*"],
+  "packages": ["bricks/*", "shared/*"],
   "version": "independent",
   "npmClient": "yarn",
   "stream": true,
