--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -30,12 +30,15 @@
   },
   "dependencies": {
     "@next-bricks/icons": "^0.1.6",
+    "@next-shared/general": "^0.1.0",
+    "@next-bricks/basic": "^0.5.0",
     "@next-core/element": "^1.0.5",
     "@next-core/http": "^1.0.5",
     "@next-core/react-element": "^1.0.6",
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.2.0",
     "classnames": "^2.3.2",
+    "@next-core/runtime": "^1.9.0",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
