--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -47,6 +47,7 @@
     "@milkdown/prose": "^7.1.1",
     "@milkdown/react": "^7.1.1",
     "@milkdown/transformer": "^7.1.1",
+    "@milkdown/theme-nord": "7.1.1",
     "@type-config/strict": "^1.2.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
