--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -31,6 +31,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-bricks/containers": "*",
     "@next-bricks/icons": "^0.1.6",
     "@next-core/element": "^1.0.5",
     "@next-core/http": "^1.0.5",
