--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -10,7 +10,8 @@
   "type": "module",
   "sideEffects": true,
   "files": [
-    "dist"
+    "dist",
+    "dist-types"
   ],
   "exports": {
     "./package.json": "./package.json",
@@ -21,7 +22,9 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development build-next-bricks --watch",
-    "build": "cross-env NODE_ENV=production build-next-bricks",
+    "build": "npm run build:main && npm run build:types",
+    "build:main": "cross-env NODE_ENV=production build-next-bricks",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
     "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
