--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@next-bricks/basic",
-  "version": "0.5.2",
-  "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/basic",
+  "name": "@next-bricks/presentational",
+  "version": "0.0.0",
+  "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/presentational",
   "repository": {
     "type": "git",
     "url": "git@github.com:easyops-cn/next-bricks.git"
@@ -31,15 +31,13 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/icons": "^0.1.6",
+    "@next-bricks/containers": "*",
     "@next-core/element": "^1.0.5",
-    "@next-core/http": "^1.0.5",
+    "@next-core/i18n": "^1.0.14",
     "@next-core/react-element": "^1.0.6",
-    "@next-core/react-runtime": "^1.0.34",
-    "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.2.0",
+    "@next-core/utils": "^1.4.2",
     "classnames": "^2.3.2",
-    "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
