feat(): support upload img

--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -41,19 +41,22 @@
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117",
-    "@milkdown/core": "^7.1.1",
-    "@milkdown/ctx": "^7.1.1",
-    "@milkdown/preset-commonmark": "^7.1.1",
-    "@milkdown/prose": "^7.1.1",
-    "@milkdown/react": "^7.1.1",
-    "@milkdown/transformer": "^7.1.1",
-    "@milkdown/theme-nord": "^7.1.1",
-    "@milkdown/plugin-history": "^7.1.1",
+    "@milkdown/core": "7.1.1",
+    "@milkdown/ctx": "7.1.1",
+    "@milkdown/preset-commonmark": "7.1.1",
+    "@milkdown/prose": "7.1.1",
+    "@milkdown/react": "7.1.1",
+    "@milkdown/transformer": "7.1.1",
+    "@milkdown/theme-nord": "7.1.1",
+    "@milkdown/plugin-history": "7.1.1",
+    "@milkdown/plugin-upload": "7.1.1",
     "@type-config/strict": "^1.2.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react-dom": "0.0.0-experimental-ee8509801-20230117",
-    "tslib": "^2.4.1"
+    "tslib": "^2.4.1",
+    "@next-sdk/object-store-sdk": "^2.1.2",
+    "@next-core/brick-http": "^2.8.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.5.1",
